Connect to database via script (populatedb.js)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,9 @@
     </head>
     <body>
         <p>Hello</p>
+        <br>
+        <%= usernames %>
+        <br>
         <a href="/new">Create user</a>
 
     </body>
