create /search functionality, need to connect to SQL logic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
         <%= usernames %>
         <br>
         <a href="/new">Create user</a>
-
+        <br>
+        <a href="/search">Search for Someone</a>
     </body>
 </html>
