Add delete route that deletes all current users

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,15 @@
         <br>
         <%= usernames %>
         <br>
+        <p></p>
         <a href="/new">Create user</a>
         <br>
         <a href="/search">Search for Someone</a>
+
+        <p></p>
+        <a href="/delete" style="color: red; font-weight: bold;
+            font-size: 18px; text-decoration: none;">
+            Delete Users
+        </a>
     </body>
 </html>
